# newtype-generics

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  newtype-generics.cabal  newtype.cabal  stack.yaml
.github/workflows/: haskell-ci.yml
Control/: Newtype.hs
Control/Newtype/: Generics.hs
bench/: main.hs
test/Control/: NewtypeSpec.hs
