Name:                newtype
Version:             0.3
Synopsis:            A typeclass and set of functions for working with newtypes.
Description:         Per Conor McBride, the Newtype typeclass represents the packing and unpacking of a newtype,
                     and allows you to operatate under that newtype with functions such as ala.
                     Supports generics was added in version 0.3.
License:             BSD3
License-file:        LICENSE
Author:              Darius Jahandarie, Conor McBride, Jo찾o Cristovao
Maintainer:          Darius Jahandarie <djahandarie at gmail>, Jo찾o Crist처v찾o <jmacristovao@gmail.com>
-- Copyright:           
Category:            Control
Build-type:          Simple
-- Extra-source-files:  
Cabal-version:       >=1.2

Library
  Exposed-modules:     Control.Newtype
  Build-depends:       base >= 3.0 && < 5
  -- Other-modules:       
  -- Build-tools:         
  Ghc-options: -Wall
